<resources>
    <string name="ahead_of_the_deadline">ahead of the deadline</string>
    <string name="app_name">Deadline Killer</string>
    <string name="button_add_reminder">Add Reminder</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_discard">Discard</string>
    <string name="button_edit">Edit</string>
    <string name="button_no">No</string>
    <string name="button_ok">OK</string>
    <string name="button_yes">Yes</string>
    <string name="chip_alarm">Alarm</string>
    <string name="chip_notification">Notification</string>
    <string name="confirm_deadline_done">Are you sure to mark %1$s as done?</string>
    <string name="confirm_deletion">Delete?</string>
    <string name="confirm_discarding_changes">Discard changes?</string>
    <string name="congratulation_body">You\'ve just finished %1$s %2$d %3$s ahead of the deadline.</string>
    <string name="congratulation_emoji">🎉</string>
    <string name="congratulation_title">Congratulations!</string>
    <string name="create_new_deadline_page_title">Create new deadline</string>
    <string name="create_new_reminder_page_title">Create new reminder</string>
    <string name="date_hint">Date</string>
    <string name="date_icon_content_description">Date</string>
    <string name="deadline_icon_content_description">Deadlines</string>
    <string name="deadline_list_page_title">Deadlines</string>
    <string name="deadline_widget_configure_page_title">Choose a deadline</string>
    <string name="deadline_widget_description">Deadline</string>
    <string name="duration_format_days_hours_minutes">%1$d %2$s, %3$d %4$s and %5$d %6$s</string>
    <string name="duration_format_hours_minutes">%1$d %2$s and %3$d %4$s</string>
    <string name="duration_format_minutes">%1$d %2$s</string>
    <string name="edit_deadline_page_title">Edit deadline</string>
    <string name="edit_reminder_page_title">Edit reminder</string>
    <string name="empty_title">Title cannot be empty</string>
    <string name="error_icon_content_description_">Error</string>
    <string name="fab_add_content_description">Add</string>
    <string name="from_now">from now</string>
    <string name="invalid_date">Invalid date</string>
    <string name="invalid_time">Invalid time</string>
    <string name="invocation_failed">INVOCATION FAILED</string>
    <string name="item_all">All</string>
    <string name="item_deadlines">Deadlines</string>
    <string name="item_delete">Delete</string>
    <string name="item_done">Done</string>
    <string name="item_edit">Edit</string>
    <string name="item_filter">Filter</string>
    <string name="item_mark_as_done">Mark as done</string>
    <string name="item_mark_as_undone">Mark as undone</string>
    <string name="item_only_undone">Only undone</string>
    <string name="item_only_upcoming">Only upcoming</string>
    <string name="item_reminders">Reminders</string>
    <string name="item_settings">Settings</string>
    <string name="no_deadlines">No deadlines</string>
    <string name="no_reminders">No reminders</string>
    <string name="notes_hint">Notes</string>
    <string name="notes_icon_content_description">Notes</string>
    <string name="preference_category_alarms">Alarms</string>
    <string name="preference_ringtone">Ringtone</string>
    <string name="preference_vibrate">Vibrate</string>
    <string name="reminder_icon_content_description">Reminders</string>
    <string name="reminder_list_page_title">Reminders</string>
    <string name="reminder_type_icon_content_description">Reminder type icon</string>
    <string name="reminders_channel_name">Reminders</string>
    <string name="settings_page_title">Settings</string>
    <string name="time_format">%1$02d:%2$02d</string>
    <string name="time_hint">Time</string>
    <string name="time_icon_content_description">Time</string>
    <string name="title_hint">Title</string>
    <string name="title_icon_content_description">Title</string>
    <string name="unsuccessful_invocation_notification">Failed to invoke one or more reminders</string>
    <string name="version_name">Version %1$s</string>
    <string name="view_deadline_page_title">View deadline</string>
    <string name="view_reminder_page_title">View reminder</string>
    <string name="widget_warning">Add at least one deadline widget to the home screen to ensure reminders go off as scheduled.</string>
    <plurals name="days">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
</resources>