<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_filter"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        android:title="@string/item_filter"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/item_all"
                    android:title="@string/item_all" />
                <item
                    android:id="@+id/item_only_undone"
                    android:title="@string/item_only_undone" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/item_settings"
        android:title="@string/item_settings"
        app:showAsAction="never" />
</menu>