<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ViewDeadlineFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_reminder_options"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/view_reminder_page_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/image_view_reminder_type"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/reminder_type_icon_content_description"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_chat_bubble_outline_24" />

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="2022/06/07" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                tools:text="00:00" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_view_invocation_failed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawablePadding="4dp"
            android:gravity="center_horizontal"
            android:text="@string/invocation_failed"
            android:textColor="@color/red_500"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_baseline_error_24"
            app:drawableTint="@color/red_500" />

        <LinearLayout
            android:id="@+id/linear_layout_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_deadline_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Lorem ipsum dolor sit amet" />

            <TextView
                android:id="@+id/text_view_deadline_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/gray_600"
                android:textSize="16sp"
                tools:text="2022/06/07 00:00" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_view_relative_reminder_time_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="50 days, 12 hours and 30 minutes" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/from_now"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_view_relative_reminder_time_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="50 days, 12 hours and 30 minutes" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/ahead_of_the_deadline"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>